# Calculator

./: .gitignore  .pre-commit-config.yaml  README.md  gui.py  main.py  pyproject.toml
.github/workflows/: build.yml  test.yaml
Calculator/: Calculations.py
src/: Gui.py  constants.py
tests/: test_Gui.py
