[tool.poetry]
name = "calculator"
version = "0.1.0"
description = "Calculator"
authors = ["radzek15 <radzek15@wp.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.6.1"
ruff = "^0.2.1"
pre-commit = "^3.6.0"
isort = "^5.13.2"
pyupgrade = "^3.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
